<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_header_back"
        app:title="Register"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_30"
            android:paddingTop="@dimen/padding_20"
            android:paddingRight="@dimen/padding_30">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingBottom="@dimen/padding_20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/padding_20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/separator"
                android:hint="@string/phone"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/padding_20" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_10">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:paddingLeft="@dimen/padding_15"
                    android:text="@string/male"
                    android:textColor="@color/fontDesc"
                    android:textSize="@dimen/text_18" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:paddingLeft="@dimen/padding_15"
                    android:text="@string/female"
                    android:textColor="@color/fontDesc"
                    android:textSize="@dimen/text_18" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_blood"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_weight="1"
                    android:entries="@array/blood_type"
                    android:paddingBottom="@dimen/padding_20" />

                <Spinner
                    android:id="@+id/sp_reshus"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_weight="1"
                    android:entries="@array/reshus"
                    android:paddingBottom="@dimen/padding_20" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/padding_20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/padding_20" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_10">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:paddingLeft="@dimen/padding_15"
                    android:text="@string/personal"
                    android:textColor="@color/fontDesc"
                    android:textSize="@dimen/text_18" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:gravity="center"
                    android:text="@string/organization"
                    android:textColor="@color/fontDesc"
                    android:textSize="@dimen/text_18" />
            </RadioGroup>

            <Spinner
                android:id="@+id/sp_job"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/job"
                android:paddingBottom="@dimen/padding_20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:paddingBottom="@dimen/padding_20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_blood_needed_location"
                android:hint="@string/location"
                android:inputType="text"
                android:paddingBottom="@dimen/padding_20" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:padding="@dimen/padding_20"
                android:text="@string/agree"
                android:textColor="@color/fontDesc" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/btn_background_register"
                android:padding="@dimen/padding_10"
                android:text="@string/btn_register"
                android:textColor="@color/lightBlue"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>